--- a/dashboard/payment/payment.html
+++ b/dashboard/payment/payment.html
@@ -53,41 +53,50 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
         .offcanvas {
-            width: 400px !important;
-            border-radius: 0;
+            width: 600px !important;
             background: #fff;
+            border-left: 1px solid #dee2e6;
         }
         .offcanvas-header {
             background: #1d0979;
             color: white;
+            padding: 1.5rem;
         }
-        .plan-details, .payment-details {
-            padding: 20px;
+        .offcanvas-body {
+            padding: 2rem;
         }
-        .plan-details h5 {
+        .plan-details h5, .payment-details h5 {
             color: #1d0979;
             font-weight: bold;
+            margin-bottom: 1.5rem;
         }
         .plan-details ul {
             list-style: none;
             padding: 0;
         }
         .plan-details ul li {
-            padding: 5px 0;
+            padding: 8px 0;
             display: flex;
             align-items: center;
         }
         .plan-details ul li i {
             color: #1d0979;
-            margin-right: 10px;
+            margin-right: 12px;
         }
-        .payment-details input, .payment-details select {
-            border-radius: 0;
+        .payment-details .form-control, .payment-details .form-select {
+            border-radius: 0.25rem;
+            box-shadow: none;
+        }
+        .payment-details .form-label {
+            font-weight: 500;
+            color: #333;
         }
         .btn-primary {
             background-color: #1d0979;
             border-color: #1d0979;
-            border-radius: 0;
+            border-radius: 0.25rem;
+            padding: 0.75rem;
+            font-weight: 500;
         }
         .btn-primary:hover {
             background-color: #15055a;
@@ -115,6 +124,17 @@
             background-color: #1d0979;
             border: none;
         }
+        .paybill-instructions {
+            background-color: #f8f9fa;
+            border: 1px solid #dee2e6;
+            border-radius: 0.25rem;
+            padding: 1rem;
+            margin-bottom: 1.5rem;
+        }
+        .paybill-instructions ul {
+            padding-left: 1.25rem;
+            margin-bottom: 0;
+        }
         @media (max-width: 576px) {
             .offcanvas {
                 width: 100% !important;
@@ -124,6 +144,9 @@
             }
             .hero-section p {
                 font-size: 1rem;
+            }
+            .offcanvas-body {
+                padding: 1.5rem;
             }
         }
     </style>
@@ -254,7 +277,7 @@
                         </h2>
                         <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="faq3" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                For non-card payments, enter your payment reference number in the verification modal. Card payments are verified automatically.
+                                For M-Pesa Paybill payments, enter your transaction ID in the verification modal. Card payments are verified automatically.
                             </div>
                         </div>
                     </div>
@@ -282,7 +305,7 @@
                         <select class="form-select" id="paymentMethod" required>
                             <option value="">Select a payment method</option>
                             <option value="card">Credit/Debit Card (MasterCard)</option>
-                            <option value="mpesa">M-Pesa</option>
+                            <option value="paybill">M-Pesa Paybill</option>
                         </select>
                     </div>
                     <!-- Card Payment Fields -->
@@ -293,11 +316,34 @@
                             <div id="cardErrors" class="text-danger small"></div>
                         </div>
                     </div>
-                    <!-- M-Pesa Fields -->
-                    <div id="mpesaPaymentFields" class="d-none">
+                    <!-- M-Pesa Paybill Fields -->
+                    <div id="paybillPaymentFields" class="d-none">
+                        <div class="paybill-instructions">
+                            <h6 class="mb-3">How to Pay via M-Pesa Paybill</h6>
+                            <ul>
+                                <li>Go to Safaricom Menu > M-Pesa > Lipa na M-Pesa > Paybill.</li>
+                                <li>Enter the Paybill Number below.</li>
+                                <li>Enter the Account Number below (or your email).</li>
+                                <li>Enter the Amount and confirm the payment.</li>
+                                <li>Enter the M-Pesa Transaction ID received via SMS below.</li>
+                            </ul>
+                        </div>
                         <div class="mb-3">
-                            <label for="phoneNumber" class="form-label">Phone Number</label>
-                            <input type="tel" class="form-control" id="phoneNumber" placeholder="e.g., +254700123456">
+                            <label for="paybillNumber" class="form-label">Paybill Number</label>
+                            <input type="text" class="form-control" id="paybillNumber" value="123456" readonly>
+                        </div>
+                        <div class="mb-3">
+                            <label for="accountNumber" class="form-label">Account Number</label>
+                            <input type="text" class="form-control" id="accountNumber" placeholder="Your email or account ID">
+                        </div>
+                        <div class="mb-3">
+                            <label for="paybillAmount" class="form-label">Amount (KES)</label>
+                            <input type="number" class="form-control" id="paybillAmount" readonly>
+                        </div>
+                        <div class="mb-3">
+                            <label for="transactionId" class="form-label">M-Pesa Transaction ID</label>
+                            <input type="text" class="form-control" id="transactionId" placeholder="e.g., WSI9K8J2P3" required>
+                            <div id="transactionIdError" class="text-danger small mt-1"></div>
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Proceed to Payment</button>
@@ -335,8 +381,8 @@
                 <div class="modal-body">
                     <form id="verifyPaymentForm">
                         <div class="mb-3">
-                            <label for="uniqueReference" class="form-label">Payment Reference Number</label>
-                            <input type="text" class="form-control" id="uniqueReference" required>
+                            <label for="uniqueReference" class="form-label">M-Pesa Transaction ID</label>
+                            <input type="text" class="form-control" id="uniqueReference" placeholder="e.g., WSI9K8J2P3" required>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Submit</button>
                     </form>
@@ -421,6 +467,7 @@
         const INTERVAL_TIME = 30 * 60 * 1000; // 30 minutes
         let idleTimeout;
         let selectedPlanId = null;
+        let selectedPlanPrice = null;
         const stripe = Stripe('pk_test_your_stripe_publishable_key'); // Replace with your Stripe publishable key
         const elements = stripe.elements();
         const cardElement = elements.create('card');
@@ -455,8 +502,22 @@
             document.getElementById('paymentSelection').classList.add('d-none');
             offcanvas.show();
         };
-        const showPaymentPanel = (planId) => {
+        const showPaymentPanel = async (planId) => {
             selectedPlanId = planId;
+            try {
+                const token = sessionStorage.getItem("token");
+                const response = await axios.get(`${BASE_URL}/subscription/plans/${planId}/`, {
+                    headers: { Authorization: `Token ${token}` }
+                });
+                selectedPlanPrice = response.data.price;
+                document.getElementById('paybillAmount').value = selectedPlanPrice;
+                const email = sessionStorage.getItem("email");
+                document.getElementById('accountNumber').value = email || '';
+            } catch (error) {
+                console.error('Error fetching plan details:', error.response ? error.response.data : error.message);
+                showErrorModal("Failed to load plan details. Please try again.");
+                return;
+            }
             document.getElementById('planSelection').classList.add('d-none');
             document.getElementById('paymentSelection').classList.remove('d-none');
         };
@@ -549,6 +610,12 @@
             }
         };
 
+        // Validate Transaction ID
+        const validateTransactionId = (transactionId) => {
+            const regex = /^[A-Z0-9]{10}$/;
+            return regex.test(transactionId);
+        };
+
         // Handle Payment
         const handlePayment = async (e) => {
             e.preventDefault();
@@ -556,7 +623,6 @@
             const paymentMethod = document.getElementById("paymentMethod").value;
             try {
                 if (paymentMethod === "card") {
-                    // Request PaymentIntent from backend
                     const response = await axios.post(`${BASE_URL}/payments/initiate/`, {
                         plan: selectedPlanId,
                         payment_type: 'card'
@@ -575,7 +641,6 @@
                         return;
                     }
                     if (paymentIntent.status === 'succeeded') {
-                        // Verify payment on backend
                         await axios.post(`${BASE_URL}/payments/verify-payment/`, {
                             unique_reference: paymentIntent.id
                         }, {
@@ -587,13 +652,43 @@
                     } else {
                         showErrorModal("Payment failed. Please try again.");
                     }
-                } else if (paymentMethod === "mpesa") {
-                    const phoneNumber = document.getElementById("phoneNumber").value;
-                    if (!phoneNumber) {
-                        showErrorModal("Phone number is required for M-Pesa payment.");
+                } else if (paymentMethod === "paybill") {
+                    const paybillNumber = document.getElementById("paybillNumber").value;
+                    const accountNumber = document.getElementById("accountNumber").value;
+                    const amount = document.getElementById("paybillAmount").value;
+                    const transactionId = document.getElementById("transactionId").value;
+
+                    if (!accountNumber) {
+                        showErrorModal("Account number is required for Paybill payment.");
                         return;
                     }
-                    window.location.href = `payment/payment.html?planId=${encodeURIComponent(selectedPlanId)}&phoneNumber=${encodeURIComponent(phoneNumber)}`;
+                    if (!amount) {
+                        showErrorModal("Amount is required for Paybill payment.");
+                        return;
+                    }
+                    if (!transactionId) {
+                        showErrorModal("M-Pesa Transaction ID is required.");
+                        return;
+                    }
+                    if (!validateTransactionId(transactionId)) {
+                        document.getElementById("transactionIdError").textContent = "Invalid Transaction ID. It should be 10 alphanumeric characters (e.g., WSI9K8J2P3).";
+                        return;
+                    }
+
+                    const response = await axios.post(`${BASE_URL}/payments/initiate/`, {
+                        plan: selectedPlanId,
+                        payment_type: 'paybill',
+                        paybill_number: paybillNumber,
+                        account_number: accountNumber,
+                        amount: parseFloat(amount),
+                        transaction_id: transactionId
+                    }, {
+                        headers: { Authorization: `Token ${token}` }
+                    });
+                    console.log('Paybill Payment Response:', response.data);
+                    showErrorModal("Paybill payment submitted successfully! Awaiting verification.");
+                    checkSubscriptionStatus();
+                    bootstrap.Offcanvas.getInstance(document.getElementById('plansOffcanvas')).hide();
                 }
             } catch (error) {
                 console.error('Error processing payment:', error.response ? error.response.data : error.message);
@@ -605,11 +700,17 @@
         const verifyPayment = async (uniqueReference) => {
             const token = sessionStorage.getItem("token");
             if (!uniqueReference) {
-                showErrorModal("Payment reference is required to verify.");
+                showErrorModal("Transaction ID is required to verify.");
+                return;
+            }
+            if (!validateTransactionId(uniqueReference)) {
+                showErrorModal("Invalid Transaction ID. It should be 10 alphanumeric characters (e.g., WSI9K8J2P3).");
                 return;
             }
             try {
-                const response = await axios.post(`${BASE_URL}/payments/verify-payment/`, { unique_reference: uniqueReference }, {
+                const response = await axios.post(`${BASE_URL}/payments/verify-payment/`, {
+                    unique_reference: uniqueReference
+                }, {
                     headers: { Authorization: `Token ${token}` }
                 });
                 console.log('Payment Verification Response:', response.data);
@@ -617,7 +718,7 @@
                 showErrorModal(response.data.success || "Payment verified successfully!");
             } catch (error) {
                 console.error('Error verifying payment:', error.response ? error.response.data : error.message);
-                showErrorModal(error.response?.data?.error || "Failed to verify payment. Please check your reference number and try again.");
+                showErrorModal(error.response?.data?.error || "Failed to verify payment. Please check your Transaction ID and try again.");
             }
         };
 
@@ -673,19 +774,16 @@
             }
 
             try {
-                // Verify user data
                 const userInfoResponse = await axios.get(`${BASE_URL}/api/user-info/`, {
                     headers: { Authorization: `Token ${token}` }
                 });
                 console.log('User info:', userInfoResponse.data);
-                // Validate sessionStorage email
                 if (userInfoResponse.data.email !== email) {
                     console.warn('Email mismatch between sessionStorage and API');
                     sessionStorage.clear();
                     window.location.href = "../login/login.html";
                     return;
                 }
-                // Update UI and sessionStorage
                 document.getElementById("userEmail").textContent = userInfoResponse.data.email || 'User';
                 sessionStorage.setItem("username", userInfoResponse.data.username);
             } catch (error) {
@@ -706,17 +804,18 @@
             document.getElementById("paymentForm").addEventListener("submit", handlePayment);
             document.getElementById("paymentMethod").addEventListener("change", (e) => {
                 const cardFields = document.getElementById("cardPaymentFields");
-                const mpesaFields = document.getElementById("mpesaPaymentFields");
+                const paybillFields = document.getElementById("paybillPaymentFields");
                 if (e.target.value === "card") {
                     cardFields.classList.remove("d-none");
-                    mpesaFields.classList.add("d-none");
-                } else if (e.target.value === "mpesa") {
+                    paybillFields.classList.add("d-none");
+                } else if (e.target.value === "paybill") {
                     cardFields.classList.add("d-none");
-                    mpesaFields.classList.remove("d-none");
+                    paybillFields.classList.remove("d-none");
                 } else {
                     cardFields.classList.add("d-none");
-                    mpesaFields.classList.add("d-none");
+                    paybillFields.classList.add("d-none");
                 }
+                document.getElementById("transactionIdError").textContent = "";
             });
         });
     </script>
