--- a/login/login.html
+++ b/login/login.html
@@ -127,7 +127,7 @@
                 Please enter a valid username
             </div>
             <div id="step-username">
-                <input type="text" class="form-control form-control-underline mt-4 mb-3" id="usernameInput" placeholder="Enter a username" required>
+                <input type="text" class="form-control form-control-underline mt-4 mb-3" id="usernameInput" placeholder="Enter your email address" required>
                 <div id="usernameFeedback" class="error-message d-none"></div>
 
                 <div class="d-flex justify-content-end mt-4">
@@ -173,7 +173,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div class="alert alert-warning alert-dismissible fade d-none" id="wrongCredentialsAlert" role="alert">
-            <strong>Invalid Credentials!</strong> Please check your username and password.
+            <strong>Invalid Credentials!</strong> Please check your email and password.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div class="alert alert-danger alert-dismissible fade d-none" id="userNotFoundAlert" role="alert">
@@ -181,7 +181,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div class="alert alert-dark alert-dismissible fade d-none" id="serverErrorAlert" role="alert">
-            <strong>Server Error!</strong> Something went wrong. Please try again later.
+            <strong>Server Error!</strong> Something went wrong. Please try again later!
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div class="alert alert-info alert-dismissible fade d-none" id="verifyEmailAlert" role="alert">
