--- a/dashboard/government/index.html
+++ b/dashboard/government/index.html
@@ -11,13 +11,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <style>
+        /* Existing styles unchanged */
         body {
             min-height: 100vh;
             margin: 0;
             display: flex;
             flex-direction: column;
         }
-        /* Navbar */
         .navbar {
             background-color: #7b4d11;
             height: 60px;
@@ -25,8 +25,6 @@
             font-weight: bold;
         }
         .navbar-brand img { height: 30px; }
-
-        /* Sidebar */
         .sidebar {
             position: fixed;
             top: 60px;
@@ -39,7 +37,7 @@
             transition: left 0.3s ease-in-out;
             z-index: 1000;
             overflow-y: auto;
-            border: 1px solid #fff
+            border: 1px solid #fff;
         }
         .sidebar.active { left: 0; }
         .sidebar a {
@@ -52,16 +50,12 @@
         }
         .sidebar a:hover { background: #ADE0C2; }
         .submenu a { padding-left: 35px; font-size: 13px; }
-
-        /* Content */
         .content {
             transition: margin-left 0.3s;
             margin-left: 0;
         }
         .sidebar.active ~ .content { margin-left: 250px; }
         .custom-container { width: 80%; padding: 20px; margin: 0 auto; }
-
-        /* Cards */
         .card {
             transition: transform 0.3s ease;
             border: none;
@@ -77,8 +71,6 @@
         .card-title { color: #7b4d11; }
         .small-card .card-title { color: #4caf50; font-size: 1rem; }
         .small-card .card-text { font-size: 0.9rem; }
-
-        /* Modal */
         .modal {
             display: none;
             position: fixed;
@@ -114,20 +106,17 @@
             border-radius: 4px;
         }
         #upgradeButton:hover { background-color: #45a049; }
-
         footer {
             margin-top: auto;
             background-color: #D3EBDF;
             color: #7b4d11;
             font-size: 14px;
         }
-
         .footer-links a {
             color: #7b4d11;
             text-decoration: none;
             margin: 0 8px;
         }
-
         .footer-links a:hover {
             text-decoration: underline;
         }
@@ -158,7 +147,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white d-flex align-items-center" href="#" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="assets/images.png" alt="Profile" class="rounded-circle me-2" style="height: 20px; width: 20px;">
-                            <span id="username">Loading...</span>
+                            <span id="userEmail">Loading...</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="profileDropdown" style="width: 320px; background: #ADE0C2;">
                             <div class="dropdown-item mb-2">
@@ -177,7 +166,7 @@
                             <div class="dropdown-item mb-2">
                                 <h6 class="dropdown-header" data-bs-toggle="collapse" data-bs-target="#subscriptionSection">Subscription <i class="bi bi-chevron-down"></i></h6>
                                 <div class="collapse" id="subscriptionSection">
-                                    <a class="dropdown-item" href="#"><i class="bi bi-star me-2"></i>Tier/Subscription Plan</a>
+                                    <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#subscriptionModal"><i class="bi bi-star me-2"></i>Tier/Subscription Plan</a>
                                 </div>
                             </div>
                             <div class="dropdown-item mb-2">
@@ -325,7 +314,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
-                    <div class="card small-card shadow-sm" onclick="redirectTo('profile.html')" style="background: #7b4d11;">
+                    <div class="card small-card shadow-sm" id="subscriptionsCardsModal" style="background: #7b4d11;">
                         <img src="assets/img/subscription-removebg-preview.png" class="card-img-top" alt="Subscriptions">
                         <div class="card-body">
                             <h6 class="card-title">Subscriptions</h6>
@@ -346,34 +335,84 @@
         </div>
     </div>
 
-    <!-- Subscription Modal -->
-    <div class="modal" id="subscriptionModal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Subscription Details</h2>
-            <div id="subscriptionDetails"></div>
-            <button id="upgradeButton">Upgrade Plan</button>
+    <!-- Subscription Modal (Converted to Bootstrap Modal) -->
+    <div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="subscriptionModalLabel">Subscription Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="subscriptionDetails">Loading subscription details...</div>
+                    <div id="upgradeOptions"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button id="upgradeButton" class="btn btn-primary">Upgrade Plan</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Logout Modal -->
+    <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="logoutModalLabel">Confirm Logout</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to log out?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="handleLogout()">Log Out</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <footer class="text-center py-3">
         <hr style="color:#7b4d11"/>
         <div class="container d-flex flex-wrap justify-content-center align-items-center gap-2 footer-links">
-          <span class="me-3">&copy; 2025 FLIPS, Inc.</span>
-          <a href="#">Terms of service</a>
-          <a href="#">Privacy policy</a>
-          <a href="#">Security</a>
-          <a href="#">Docs</a>
-          <a href="#">Contact</a>
-          <a href="#">Do not share my personal information</a>
+            <span class="me-3">© 2025 FLIPS, Inc.</span>
+            <a href="#">Terms of service</a>
+            <a href="#">Privacy policy</a>
+            <a href="#">Security</a>
+            <a href="#">Docs</a>
+            <a href="#">Contact</a>
+            <a href="#">Do not share my personal information</a>
         </div>
-      </footer>
+    </footer>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="assets/js/userinfo.js"></script>
+    <script src="assets/js/rigsdata.js"></script>
+    <script src="assets/js/getcharts.js"></script>
     <script>
+        const BASE_URL = 'https://api.flipsintel.org';
+        const INTERVAL_TIME = 30 * 60 * 1000; // 30 minutes
+        let idleTimeout;
+
+        // Idle Timeout
+        const resetIdleTimeout = () => {
+            clearTimeout(idleTimeout);
+            idleTimeout = setTimeout(showLogoutModal, INTERVAL_TIME);
+        };
+        document.addEventListener("mousemove", resetIdleTimeout);
+        document.addEventListener("keypress", resetIdleTimeout);
+        document.addEventListener("DOMContentLoaded", resetIdleTimeout);
+
+        // Show Logout Modal
+        const showLogoutModal = () => {
+            const modal = new bootstrap.Modal(document.getElementById('logoutModal'));
+            modal.show();
+        };
+
         // Toggle Sidebar
         function toggleSidebar() {
             const sidebar = document.getElementById('sidebar');
@@ -382,28 +421,10 @@
             content.classList.toggle('active');
         }
 
-        // Close Modal
-        function closeModal() {
-            document.getElementById('subscriptionModal').style.display = 'none';
-        }
-
         // Redirect Function
         function redirectTo(page) {
             console.log(`Redirecting to: ${page}`);
             window.location.href = page;
-        }
-
-        // Existing Functions (Assuming they are defined elsewhere or need implementation)
-        function handleLogout() {
-            // Placeholder for logout logic
-            console.log('Logout initiated');
-            localStorage.clear();
-            window.location.href = 'login.html'; // Adjust path as needed
-        }
-
-        function checkTokenAndFetchData() {
-            // Placeholder for token check and data fetch
-            console.log('Checking token and fetching data');
         }
     </script>
 </body>
