--- a/dashboard/payment/payment.html
+++ b/dashboard/payment/payment.html
@@ -485,7 +485,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script>
+   <script>
     const BASE_URL = 'https://api.flipsintel.org';
     const INTERVAL_TIME = 30 * 60 * 1000; // 30 minutes
     let idleTimeout;
@@ -708,15 +708,25 @@
 
     // Validate Phone Number
     const validatePhoneNumber = (phoneNumber) => {
-        // Remove any spaces or non-numeric characters except + for validation
+        if (!phoneNumber || typeof phoneNumber !== 'string') {
+            console.warn('Invalid phone number input:', phoneNumber);
+            return false;
+        }
+        // Remove spaces, dashes, and other non-essential characters except +
         const cleanedNumber = phoneNumber.replace(/[\s-]/g, '');
         // Matches +2547 followed by 8 digits, or 07/7 followed by 8 digits
         const regex = /^(?:\+2547[0-9]{8}|07[0-9]{8}|7[0-9]{8})$/;
-        return regex.test(cleanedNumber);
+        const isValid = regex.test(cleanedNumber);
+        console.log('Phone number validation:', { input: phoneNumber, cleaned: cleanedNumber, isValid });
+        return isValid;
     };
 
     // Normalize Phone Number
     const normalizePhoneNumber = (phoneNumber) => {
+        if (!phoneNumber || typeof phoneNumber !== 'string') {
+            console.warn('Invalid phone number for normalization:', phoneNumber);
+            return '';
+        }
         const cleanedNumber = phoneNumber.replace(/[\s-]/g, '');
         if (/^\+2547[0-9]{8}$/.test(cleanedNumber)) {
             return cleanedNumber; // Already in +254 format
@@ -725,6 +735,7 @@
         } else if (/^7[0-9]{8}$/.test(cleanedNumber)) {
             return '+254' + cleanedNumber; // Convert 7XXXXXXXX to +2547XXXXXXXX
         }
+        console.warn('Phone number not normalized, returning cleaned:', cleanedNumber);
         return cleanedNumber; // Return as is if format is invalid
     };
 
@@ -742,12 +753,13 @@
             showErrorModal("Invalid phone number format. Use +2547XXXXXXXX, 07XXXXXXXX, or 7XXXXXXXX.");
             return;
         }
-        if (!amount) {
-            showErrorModal("Amount is required for STK Push payment.");
+        if (!amount || isNaN(parseFloat(amount))) {
+            showErrorModal("Valid amount is required for STK Push payment.");
             return;
         }
 
         const normalizedPhoneNumber = normalizePhoneNumber(accountNumber);
+        console.log('Initiating STK Push with:', { accountNumber, normalizedPhoneNumber, amount });
 
         try {
             const response = await axios.post(`${BASE_URL}/payments/initiate/`, {
@@ -784,8 +796,12 @@
                     showErrorModal("Account number (phone number) is required for Paybill payment.");
                     return;
                 }
-                if (!amount) {
-                    showErrorModal("Amount is required for Paybill payment.");
+                if (!validatePhoneNumber(accountNumber)) {
+                    showErrorModal("Invalid phone number format for Paybill. Use +2547XXXXXXXX, 07XXXXXXXX, or 7XXXXXXXX.");
+                    return;
+                }
+                if (!amount || isNaN(parseFloat(amount))) {
+                    showErrorModal("Valid amount is required for Paybill payment.");
                     return;
                 }
                 if (!transactionId) {
@@ -798,6 +814,7 @@
                 }
 
                 const normalizedPhoneNumber = normalizePhoneNumber(accountNumber);
+                console.log('Initiating Paybill with:', { accountNumber, normalizedPhoneNumber, amount, transactionId });
 
                 const response = await axios.post(`${BASE_URL}/payments/initiate/`, {
                     plan: selectedPlanId,
@@ -807,150 +824,6 @@
                     amount: parseFloat(amount),
                     transaction_id: transactionId
                 }, {
-                    headers: { Authorization: `Token ${token}` }
-                });
-                console.log('Paybill Payment Response:', response.data);
-                showErrorModal("Paybill payment submitted successfully! Awaiting verification.");
-                checkSubscriptionStatus();
-                bootstrap.Offcanvas.getInstance(document.getElementById('plansOffcanvas')).hide();
-            } else if (paymentMethod === "card") {
-                const { paymentIntent, error } = await stripe.confirmCardPayment(
-                    sessionStorage.getItem("clientSecret"),
-                    {
-                        payment_method: {
-                            card: cardElement,
-                        },
-                    }
-                );
-                if (error) {
-                    document.getElementById("cardErrors").textContent = error.message;
-                    return;
-                }
-                const response = await axios.post(`${BASE_URL}/payments/initiate/`, {
-                    plan: selectedPlanId,
-                    payment_type: 'card',
-                    amount: parseFloat(selectedPlanPrice),
-                    payment_intent_id: paymentIntent.id
-                }, {
-                    headers: { Authorization: `Token ${token}` }
-                });
-                console.log('Card Payment Response:', response.data);
-                showErrorModal("Card payment submitted successfully! Awaiting verification.");
-                checkSubscriptionStatus();
-                bootstrap.Offcanvas.getInstance(document.getElementById('plansOffcanvas')).hide();
-            } else if (paymentMethod === "stk_push") {
-                // STK Push payment is initiated via the dedicated button
-                showErrorModal("Please use the 'Initiate STK Push' button to proceed with STK Push payment.");
-            } else {
-                showErrorModal("Selected payment method is not supported.");
-            }
-        } catch (error) {
-            console.error('Error processing payment:', error.response ? error.response.data : error.message);
-            showErrorModal(error.response?.data?.error || "Failed to process payment. Please try again.");
-        }
-    };
-
-    // Verify Payment
-    const validatePhoneNumber = (phoneNumber) => {
-    // Remove any spaces or non-numeric characters except + for validation
-    const cleanedNumber = phoneNumber.replace(/[\s-]/g, '');
-    // Matches +2547 followed by 8 digits, or 07/7 followed by 8 digits
-    const regex = /^(?:\+2547[0-9]{8}|07[0-9]{8}|7[0-9]{8})$/;
-    return regex.test(cleanedNumber);
-};
-
-// Normalize Phone Number
-const normalizePhoneNumber = (phoneNumber) => {
-    const cleanedNumber = phoneNumber.replace(/[\s-]/g, '');
-    if (/^\+2547[0-9]{8}$/.test(cleanedNumber)) {
-        return cleanedNumber; // Already in +254 format
-    } else if (/^07[0-9]{8}$/.test(cleanedNumber)) {
-        return '+254' + cleanedNumber.slice(1); // Convert 07XXXXXXXX to +2547XXXXXXXX
-    } else if (/^7[0-9]{8}$/.test(cleanedNumber)) {
-        return '+254' + cleanedNumber; // Convert 7XXXXXXXX to +2547XXXXXXXX
-    }
-    return cleanedNumber; // Return as is if format is invalid
-};
-
-// Initiate STK Push Payment
-const initiateStkPush = async () => {
-    const token = sessionStorage.getItem("token");
-    const accountNumber = document.getElementById("stkAccountNumber").value;
-    const amount = document.getElementById("stkAmount").value;
-
-    if (!accountNumber) {
-        showErrorModal("Phone number is required for STK Push payment.");
-        return;
-    }
-    if (!validatePhoneNumber(accountNumber)) {
-        showErrorModal("Invalid phone number format. Use +2547XXXXXXXX, 07XXXXXXXX, or 7XXXXXXXX.");
-        return;
-    }
-    if (!amount) {
-        showErrorModal("Amount is required for STK Push payment.");
-        return;
-    }
-
-    const normalizedPhoneNumber = normalizePhoneNumber(accountNumber);
-
-    try {
-        const response = await axios.post(`${BASE_URL}/payments/initiate/`, {
-            plan: selectedPlanId,
-            payment_type: 'stk_push',
-            account_number: normalizedPhoneNumber,
-            amount: parseFloat(amount)
-        }, {
-            headers: { Authorization: `Token ${token}` }
-        });
-        console.log('STK Push Payment Response:', response.data);
-        showErrorModal(response.data.message || "STK Push initiated successfully! Please check your phone to complete the payment.");
-        checkSubscriptionStatus();
-        bootstrap.Offcanvas.getInstance(document.getElementById('plansOffcanvas')).hide();
-    } catch (error) {
-        console.error('Error initiating STK Push:', error.response ? error.response.data : error.message);
-        showErrorModal(error.response?.data?.error || "Failed to initiate STK Push. Please try again.");
-    }
-};
-
-// Handle Payment
-const handlePayment = async (e) => {
-    e.preventDefault();
-    const token = sessionStorage.getItem("token");
-    const paymentMethod = document.getElementById("paymentMethod").value;
-
-    try {
-        if (paymentMethod === "paybill") {
-            const accountNumber = document.getElementById("accountNumber").value;
-            const amount = document.getElementById("paybillAmount").value;
-            const transactionId = document.getElementById("transactionId").value;
-
-            if (!accountNumber) {
-                showErrorModal("Account number (phone number) is required for Paybill payment.");
-                return;
-            }
-            if (!amount) {
-                showErrorModal("Amount is required for Paybill payment.");
-                return;
-            }
-            if (!transactionId) {
-                showErrorModal("M-Pesa Transaction ID is required.");
-                return;
-            }
-            if (!validateTransactionId(transactionId)) {
-                document.getElementById("transactionIdError").textContent = "Invalid Transaction ID. It should be 10 alphanumeric characters (e.g., WSI9K8J2P3).";
-                return;
-            }
-
-            const normalizedPhoneNumber = normalizePhoneNumber(accountNumber);
-
-            const response = await axios.post(`${BASE_URL}/payments/initiate/`, {
-                plan: selectedPlanId,
-                payment_type: 'paybill',
-                paybill_number: paybillNumber,
-                account_number: normalizedPhoneNumber,
-                amount: parseFloat(amount),
-                transaction_id: transactionId
-            }, {
                 headers: { Authorization: `Token ${token}` }
             });
             console.log('Paybill Payment Response:', response.data);
